--- a/src/styles/config/_vars.module.scss
+++ b/src/styles/config/_vars.module.scss
@@ -8,7 +8,7 @@ $gray: #647589;
 $text-color: #223645;
 $text-color-light: #647589;
 $bg-color: #fff;
-$error: #ff6269;
+$error: #f5202b;
 
 // Fonts
 $primary-font: "Roboto", Helvetica, Arial, sans-serif;
