--- a/src/components/UI/Form/Form.module.scss
+++ b/src/components/UI/Form/Form.module.scss
@@ -1,15 +1,42 @@
 @import "../../../styles/config.module";
 
 .Group {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .Title {
-	font-size: 2.2rem;
-	margin-bottom: 1rem;
+  font-size: 2.2rem;
+  margin-bottom: 1rem;
 }
 
 .Lead {
-	font-size: 1.7rem;
-	margin-bottom: 2rem;
+  font-size: 1.7rem;
+  margin-bottom: 2rem;
+}
+
+.Submit {
+  margin-bottom: 2rem;
+}
+
+.Connect {
+  position: relative;
+  @include flex(row, center);
+  margin-bottom: 2rem;
+
+  p {
+    margin: 0 1rem;
+  }
+
+  &::before,
+  &::after {
+    content: "";
+    display: inline-block;
+    flex: 1;
+    height: 1px;
+    background: $gray;
+  }
+}
+
+.Error {
+  margin-bottom: 2rem;
 }
