--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -1,36 +1,38 @@
 @import "../../../styles/config.module";
 
 .Label {
-	display: block;
-	margin-bottom: 0.5rem;
-	font-size: 1.7rem;
-	font-weight: 600;
-	text-transform: capitalize;
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1.7rem;
+  font-weight: 600;
+  text-transform: capitalize;
 }
 
 .Input {
-	display: inline-block;
-	width: 100%;
-	outline: none;
-	border: 1px solid rgba(black, 0.1);
-	padding: 0.75rem 1.5rem;
-	font-size: 1.8rem;
-	background-color: white;
-	transition: border-color $t-time linear;
+  display: inline-block;
+  width: 100%;
+  outline: none;
+  border: 1px solid rgba(black, 0.1);
+  border-radius: 0.5rem;
+  padding: 1rem 1.5rem;
+  font-size: 1.6rem;
+  line-height: 1.3;
+  background-color: white;
+  transition: border-color $t-time linear;
 
-	&:hover,
-	&:focus {
-		border-color: $primary-color;
-	}
+  &:hover,
+  &:focus {
+    border-color: $primary-color;
+  }
 
-	&[type="checkbox"] {
-		width: auto;
-	}
+  &[type="checkbox"] {
+    width: auto;
+  }
 }
 
 .Error {
-	display: block;
-	text-transform: capitalize;
-	margin-top: 0.5rem;
-	color: $error;
+  display: block;
+  text-transform: capitalize;
+  margin-top: 0.5rem;
+  color: $error;
 }
