logout, reset password, custom resetPassoword page

--- a/src/components/UI/Notification/Notification.module.scss
+++ b/src/components/UI/Notification/Notification.module.scss
@@ -21,12 +21,17 @@
 }
 
 .Header {
+  width: 100%;
   @include flex;
 }
 
 .Left {
   @include flex(row, center, flex-start);
   margin-right: 2rem;
+}
+
+.Right {
+  flex: 1;
 }
 
 .Line {
