--- a/src/styles/_config.module.scss
+++ b/src/styles/_config.module.scss
@@ -1,3 +1,4 @@
 @import "./config/vars.module";
+@import "./color-palette.module";
 @import "./config/mixins.module";
 @import "./config/utilities.module";
