--- a/src/styles/config/_vars.module.scss
+++ b/src/styles/config/_vars.module.scss
@@ -11,6 +11,12 @@ $bg-color: #fff;
 $warning: #ffc107;
 $error: #f5202b;
 
+// Light Theme
+$bg-light-theme: #fff;
+$text-color-light-theme: #223645;
+$primary-color-light-theme: #1c9dea;
+$secondary-color-light-theme: #223645;
+
 // Fonts
 $primary-font: "Roboto", Helvetica, Arial, sans-serif;
 $secondary-font: "Poppins", Helvetica, Arial, sans-serif;
