--- a/src/styles/_reset.module.scss
+++ b/src/styles/_reset.module.scss
@@ -10,15 +10,17 @@
 
 html {
   font-size: 62.5%;
+  height: -webkit-fill-available;
 }
 
 body {
   font-size: 1.6rem;
   font-family: $primary-font;
-  color: $text-color;
   line-height: 1.3;
-  background-color: $bg-color;
   min-height: 100vh;
+  min-height: -webkit-fill-available;
+  color: $text-color;
+  background-color: $bg-color;
 }
 
 h1,
