ChatNav component only mobile

--- a/src/styles/_color-palette.module.scss
+++ b/src/styles/_color-palette.module.scss
@@ -6,13 +6,15 @@ $themes: (
 		opaque-bg: rgba($bg-light-theme, 0.9),
 		text-color: $text-color-light-theme,
 		primary-color: $primary-color-light-theme,
-		secondary-color: $secondary-color-light-theme
+		secondary-color: $secondary-color-light-theme,
+		nav-bg: $bg-light-theme
 	),
 	dark: (
 		bg-color: black,
 		opaque-bg: rgba(black, 0.85),
 		text-color: white,
 		primary-color: $primary-color-light-theme,
-		secondary-color: $secondary-color-light-theme
+		secondary-color: $secondary-color-light-theme,
+		nav-bg: black
 	)
 );
